# image-resizing-with-rust-wasm-on-lambda-edge

./: .gitignore  Dockerfile  README.md
app/: index.js  package-lock.json  package.json
image_resize/: Cargo.toml
image_resize/src/: lib.rs
