[package]
name = "image_resize"
version = "0.1.0"
authors = ["takenoko-gohan <bamboo.shoot.rice@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "enable-interning"]}
wasm-bindgen-futures = "0.4"
base64 = "0.13.0"

[profile.release]
lto = true
opt-level = "s"